# libieeep1788

./: AUTHORS  CHANGES  CMakeLists.txt  NOTICE  README  TODO
cmake/Modules/: FindGMP.cmake  FindMPFR.cmake
doc/: CMakeLists.txt  doxyfile.in  macros.sty
doxygen/: doxyfile  macros.sty
examples/: CMakeLists.txt  basic.cpp  boolFunc.cpp  e01_helloworld.cpp  e02_intervals.cpp  e03_io.cpp  e04_bool_func.cpp  e04_decorations.cpp  e05_bool_func.cpp  e05_numFunc.cpp  e05_num_func.cpp  e06_num_func.cpp  e06_set_op.cpp  e07_set_op.cpp  e08_cancel_func.cpp  e08_elem_func.cpp  e09_cancel_func.cpp  e09_exceptions.cpp  e10_bisection.cpp  e10_mul_rev_to_pair.cpp  e11_newton.cpp  e11_rev_functions.cpp  e12_overlap_func.cpp  e13_reduction_op.cpp  e14_exceptions.cpp  e15_bisection.cpp  e16_newton.cpp  elementaryFunc.cpp  eval_example.cpp  fp_tool.cpp  helloworld.cpp  ia_bisection.cpp  ia_newton.cpp  numFunc.cpp
p1788/: CMakeLists.txt  mainpage.dox  namespace.dox  p1788.hpp  version.hpp.in
p1788/decoration/: CMakeLists.txt  decoration.hpp  namespace.dox
p1788/exception/: CMakeLists.txt  exception.hpp  namespace.dox
p1788/flavor/: CMakeLists.txt  namespace.dox
p1788/flavor/infsup/: CMakeLists.txt  flavor_ieee754.hpp  flavor_ieee754_double_bool_func_impl.hpp  flavor_ieee754_double_cancel_func_impl.hpp  flavor_ieee754_double_class_impl.hpp  flavor_ieee754_double_elem_func_impl.hpp  flavor_ieee754_double_io_impl.hpp  flavor_ieee754_double_num_func_impl.hpp  flavor_ieee754_double_rec_elem_func_impl.hpp  flavor_ieee754_double_rec_overlap_impl.hpp  flavor_ieee754_double_rec_slope_func_impl.hpp  flavor_ieee754_double_rev_elem_func_impl.hpp  flavor_ieee754_double_set_op_impl.hpp  flavor_ieee754_float_class_impl.hpp  flavor_ieee754_float_elem_func_impl.hpp  flavor_ieee754_float_io_impl.hpp  flavor_mpfr.hpp  flavor_mpfr_bool_func_impl.hpp  flavor_mpfr_cancel_func_impl.hpp  flavor_mpfr_class_impl.hpp  flavor_mpfr_class_mpfr_var_impl.hpp  flavor_mpfr_div_pair_func_impl.hpp  flavor_mpfr_elem_func_impl.hpp  flavor_mpfr_io_impl.hpp  flavor_mpfr_num_func_impl.hpp  flavor_mpfr_rec_bool_func_impl.hpp  flavor_mpfr_rec_elem_func_impl.hpp  flavor_mpfr_rec_overlap_impl.hpp  flavor_mpfr_rec_slope_func_impl.hpp  flavor_mpfr_rev_elem_func_impl.hpp  flavor_mpfr_set_op_impl.hpp  namespace.dox
p1788/flavor/infsup/setbased/: CMakeLists.txt  namespace.dox  (+19 more)
p1788/infsup/: CMakeLists.txt  base_interval.hpp  base_interval_bool_func_impl.hpp  base_interval_cancel_func_impl.hpp  base_interval_div_pair_func_impl.hpp  base_interval_elem_func_impl.hpp  base_interval_io_impl.hpp  base_interval_mul_rev_to_pair_func_impl.hpp  base_interval_num_func_impl.hpp  base_interval_rec_bool_func_impl.hpp  base_interval_rec_elem_func_impl.hpp  base_interval_rec_overlap_impl.hpp  base_interval_rec_slope_func_impl.hpp  base_interval_rev_elem_func_impl.hpp  base_interval_rev_func_impl.hpp  base_interval_set_op_impl.hpp  compressed_interval.hpp  decorated_interval.hpp  decorated_interval_bool_func_impl.hpp  decorated_interval_cancel_func_impl.hpp  decorated_interval_div_pair_func_impl.hpp  decorated_interval_elem_func_impl.hpp  decorated_interval_io_impl.hpp  decorated_interval_num_func_impl.hpp  decorated_interval_rec_bool_func_impl.hpp  decorated_interval_rec_elem_func_impl.hpp  decorated_interval_rec_overlap_impl.hpp  decorated_interval_rec_slope_func_impl.hpp  decorated_interval_rev_elem_func_impl.hpp  decorated_interval_set_op_impl.hpp  forward_declaration.hpp  interval.hpp  interval_bool_func_impl.hpp  interval_cancel_func_impl.hpp  interval_class_impl.hpp  interval_div_pair_func_impl.hpp  interval_elem_func_impl.hpp  interval_io_impl.hpp  interval_num_func_impl.hpp  interval_rec_bool_func_impl.hpp  (+6 more)
p1788/io/: CMakeLists.txt  io_manip.hpp  namespace.dox
p1788/overlapping/: CMakeLists.txt  namespace.dox  overlapping.hpp
p1788/reduction/: CMakeLists.txt  namespace.dox  reduction.hpp
p1788/util/: CMakeLists.txt  assert.hpp  eft.hpp  io.hpp  mixed_type_traits.hpp  mpfr_util.hpp  mpfr_var.hpp  mpfr_var_impl.hpp  namespace.dox  variadic_templates.hpp
test/: CMakeLists.txt  test_mpfr_bool_func.cpp
test/decoration/: test_decoration.cpp
test/exception/: test_exception.cpp
test/infsup/setbased/: CMakeLists.txt
test/io/: CMakeLists.txt  test_io_manip.cpp
test/mpfr_flavor/: CMakeLists.txt  test_bool_func.cpp  test_cancel_func.cpp  test_class.cpp  test_dec_class.cpp  test_dec_rec_bool_func.cpp  test_div_pair_func.cpp  test_elem_func.cpp  test_io.cpp  test_num_func.cpp  test_rec_bool_func.cpp  test_rec_elem_func.cpp  test_rec_overlap.cpp  test_rec_slope_func.cpp  test_rev_elem_func.cpp  test_set_op.cpp
test/overlapping/: CMakeLists.txt
test/p1788/: CMakeLists.txt
test/p1788/decoration/: CMakeLists.txt  test_decoration.cpp
test/p1788/exception/: CMakeLists.txt  test_exception.cpp
test/p1788/flavor/: CMakeLists.txt
test/p1788/infsup/: CMakeLists.txt  test_integration_mpfr_bin_ieee754_flavor_bool.cpp  test_integration_mpfr_bin_ieee754_flavor_cancel.cpp  test_integration_mpfr_bin_ieee754_flavor_class.cpp  test_integration_mpfr_bin_ieee754_flavor_elem.cpp  test_integration_mpfr_bin_ieee754_flavor_io.cpp  test_integration_mpfr_bin_ieee754_flavor_mul_rev_to_pair.cpp  test_integration_mpfr_bin_ieee754_flavor_num.cpp  test_integration_mpfr_bin_ieee754_flavor_rec_bool.cpp  test_integration_mpfr_bin_ieee754_flavor_rec_overlap.cpp  test_integration_mpfr_bin_ieee754_flavor_rev.cpp  test_integration_mpfr_bin_ieee754_flavor_set_op.cpp
test/p1788/infsup/setbased/mpfr_bin_ieee754_flavor/: CMakeLists.txt  test_bool_func.cpp  test_cancel_func.cpp  test_class.cpp  test_elem_func.cpp  test_rec_bool_func.cpp  test_rec_overlap.cpp  test_rec_slope_func.cpp
test/p1788/io/: CMakeLists.txt  test_io_manip.cpp
test/p1788/overlapping/: CMakeLists.txt  test_overlapping.cpp
test/p1788/reduction/: CMakeLists.txt  test_reduction.cpp
test/p1788/util/: CMakeLists.txt  test_io.cpp  test_mpfr_util.cpp  test_mpfr_var.cpp
test/util/: CMakeLists.txt  boost_test_wrapper.hpp  instantiate_headers.hpp  mpfr_bin_ieee754_flavor_io_test_util.hpp
(+34 files in other folders)
